some changes __alias, new clear,getText,setText,append, new __decoratorCheck...
git-svn-id: http://svn.code.sf.net/p/oobash/code@140 d2084226-57a8-46eb-bcc5-3bd0c7bada0d

--- a/0.39.1/locale/it/LC_MESSAGES/oobash.po
+++ b/0.39.1/locale/it/LC_MESSAGES/oobash.po
@@ -34,8 +34,8 @@ msgid " Author:       andreas.gregor.frank@googlemail.com"
 msgstr " Autore:       andreas.gregor.frank@googlemail.com"
 
 #: /home/franka/Bash/oobash/oobash-0.38.5.source:218
-msgid " Stop showing this message by setting QUIET=true"
-msgstr " Imposta QUIET=true per non visualizzare questo messaggio."
+msgid " Stop showing this message by setting __QUIET__=true"
+msgstr " Imposta __QUIET__=true per non visualizzare questo messaggio."
 
 #: /home/franka/Bash/oobash/oobash-0.38.5.source:220
 msgid " Try the developer tool: Class.generator"
