--- a/0.39.1/docs/Changelog.txt
+++ b/0.39.1/docs/Changelog.txt
@@ -208,7 +208,9 @@
 #    -more consistent exceptions -> special return values for different exceptions
 # Version:      0.39.1
 #    -added stacktrace
-#    -added File: append getText setText
+#    -added File: append getText setText clear
+#    -added optimized __decoratorCheck + almost every framework function now checks for decorator
+#    -overwrite __alias function if shell is not interactive
 
 #################################################################
 # Features:
