--- a/0.39.1/locale/de/LC_MESSAGES/oobash.po
+++ b/0.39.1/locale/de/LC_MESSAGES/oobash.po
@@ -34,8 +34,8 @@ msgid " Author:       andreas.gregor.frank@googlemail.com"
 msgstr " Autor:        andreas.gregor.frank@googlemail.com"
 
 #: /home/franka/Bash/oobash/oobash-0.38.5.source:218
-msgid " Stop showing this message by setting QUIET=true"
-msgstr " Diese Meldung kann durch QUIET=true deaktiviert werden"
+msgid " Stop showing this message by setting __QUIET__=true"
+msgstr " Diese Meldung kann durch __QUIET__=true deaktiviert werden"
 
 #: /home/franka/Bash/oobash/oobash-0.38.5.source:220
 msgid " Try the developer tool: Class.generator"
