some steps done...
git-svn-id: http://svn.code.sf.net/p/oobash/code@148 d2084226-57a8-46eb-bcc5-3bd0c7bada0d

--- a/0.39.1/docs/Changelog.txt
+++ b/0.39.1/docs/Changelog.txt
@@ -210,8 +210,9 @@
 #    -added stacktrace
 #    -added File: append getText setText clear
 #    -added optimized __decoratorCheck + almost every framework function now checks for decorator
-#    -overwrite __alias function if shell is not interactive
+#    -overwrite __alias, __unalias function if shell is not interactive
 #    -deleted __registerAlias __cleanUpAliases
+#    -added private function: __stackOrHelp __tracebackHeader
 
 #################################################################
 # Features:
