--- a/0.39.1/docs/Changelog.txt
+++ b/0.39.1/docs/Changelog.txt
@@ -210,7 +210,7 @@
 #    -added stacktrace
 #    -added File: append getText setText clear
 #    -added optimized __decoratorCheck + almost every framework function now checks for decorator
-#    -overwrite __alias, __unalias function if shell is not interactive
+#    -"overwrite" __alias, __unalias function if shell is not interactive
 #    -deleted __registerAlias __cleanUpAliases
 #    -added private function: __stackOrHelp __tracebackHeader
 
