--- a/0.39.1/docs/Changelog.txt
+++ b/0.39.1/docs/Changelog.txt
@@ -209,10 +209,10 @@
 # Version:      0.39.1
 #    -added stacktrace (if shell not interactive)
 #    -added help again (if shell is interactive)
-#    -added File: append getText setText clear
+#    -added File methods: append getText setText clear
 #    -added System.runtime
-#    -optimized __decoratorCheck + almost every framework function now checks for decorator
-#    -"overwrite" __alias, __unalias function if shell is not interactive
+#    -optimized __decoratorCheck: almost every framework function now checks for decorator
+#    -"overwrite" __alias, __unalias function if shell is not interactive (aliases for autocompletion are not needed then)
 #    -deleted __registerAlias __cleanUpAliases
 #    -added private functions: __stackOrHelp __tracebackHeader __getPointer
 
