added Syste.out.print, System.err.print
git-svn-id: http://svn.code.sf.net/p/oobash/code@164 d2084226-57a8-46eb-bcc5-3bd0c7bada0d

--- a/0.39.2/docs/Changelog.txt
+++ b/0.39.2/docs/Changelog.txt
@@ -216,6 +216,9 @@
 #    -deleted __registerAlias __cleanUpAliases
 #    -added private functions: __stackOrHelp __tracebackHeader __getPointer
 #    -added man pages for System
+# Version:      0.39.2
+#    -added System.out.print, System.err.print
+
 
 #################################################################
 # Features:
