added File: getLIne, help still missing
git-svn-id: http://svn.code.sf.net/p/oobash/code@165 d2084226-57a8-46eb-bcc5-3bd0c7bada0d

--- a/0.39.2/docs/Changelog.txt
+++ b/0.39.2/docs/Changelog.txt
@@ -218,6 +218,7 @@
 #    -added man pages for System
 # Version:      0.39.2
 #    -added System.out.print, System.err.print
+#    -added File: getLine
 
 
 #################################################################
