some work for SshHost
git-svn-id: http://svn.code.sf.net/p/oobash/code@182 d2084226-57a8-46eb-bcc5-3bd0c7bada0d

--- a/0.39.2/docs/Changelog.txt
+++ b/0.39.2/docs/Changelog.txt
@@ -219,6 +219,8 @@
 # Version:      0.39.2
 #    -added System.out.print, System.err.print
 #    -added File: getLine
+#    -added SshHost class
+#    -small fixes
 
 
 #################################################################
