small changelog changes
git-svn-id: http://svn.code.sf.net/p/oobash/code@194 d2084226-57a8-46eb-bcc5-3bd0c7bada0d

--- a/0.39.2/docs/Changelog.txt
+++ b/0.39.2/docs/Changelog.txt
@@ -219,7 +219,8 @@
 # Version:      0.39.2
 #    -added System.out.print, System.err.print
 #    -added File: getLine
-#    -added SshHost class
+#    -added SshHost class: standard getters + copy, fileDiff, for interactive bash:connect, vimEdit
+#    -added abstract Host class: isAlive
 #    -small fixes
 
 
