--- a/0.39.2/locale/it/LC_MESSAGES/oobash.po
+++ b/0.39.2/locale/it/LC_MESSAGES/oobash.po
@@ -186,5 +186,5 @@ msgid " Could not change MANPATH!"
 msgstr ""
 
 #: oobash/src/admin/SshHost.oobash
-msgid "Sorry, no passwordless authentication possible with SshHost '$name' and user '$user'"
-msgstr ""
+# msgid "Sorry, no passwordless authentication possible with SshHost '$name' and user '$user'"
+# msgstr ""
