some small work: manpages and man.generator, readme...
git-svn-id: http://svn.code.sf.net/p/oobash/code@216 d2084226-57a8-46eb-bcc5-3bd0c7bada0d

--- a/0.39.2/docs/Changelog.txt
+++ b/0.39.2/docs/Changelog.txt
@@ -218,7 +218,10 @@
 #    -added man pages for System
 # Version:      0.39.2
 #    -added System.out.print, System.err.print
-#    -added File: getLine
+#    -added File: getLine delLine,linecount,linematch
+#    -added Man.generator
+#    -added new decorator: @runtime
+#    -added manpages for oobash, Class.generator, Man.generator
 #    -fixes
 
 
