--- a/0.39.2/locale/de/LC_MESSAGES/oobash.po
+++ b/0.39.2/locale/de/LC_MESSAGES/oobash.po
@@ -93,9 +93,17 @@ msgstr "Tut mir leid, aber der Attributname '$attribute' ist nicht gültig."
 msgid "   Please enter one class name and the attributes"
 msgstr "   Bitte geben Sie einen Klassennamen und die Attribute ein."
 
+#: oobash/src/util/Generator.oobash:263
+msgid "   Please enter one class name"
+msgstr "   Bitte geben Sie einen Klassennamen ein."
+
 #: oobash/src/util/Generator.oobash:264
 msgid "   Example:"
 msgstr "   Beispiel:"
+
+#: oobash/src/util/Generator.oobash:265
+msgid "   Man.generator Person"
+msgstr "   Man.generator Person"
 
 #: oobash/src/util/Generator.oobash:265
 msgid "   Class.generator Person name age city > Person.oobash"
