some first Process steps
git-svn-id: http://svn.code.sf.net/p/oobash/code@236 d2084226-57a8-46eb-bcc5-3bd0c7bada0d

--- a/0.39.3/docs/Changelog.txt
+++ b/0.39.3/docs/Changelog.txt
@@ -223,7 +223,10 @@
 #    -added new decorator: @runtime
 #    -added manpage for oobash
 #    -some fixes
-
+# Version:      0.39.3
+#    -Added class Process with some methods/functions:
+#    Process, Process.create, getUser, getParentPid, getStatus, getPid
+#    --> new Dependency: ps
 
 #################################################################
 # Features:
