--- a/0.39.3/docs/Changelog.txt
+++ b/0.39.3/docs/Changelog.txt
@@ -224,11 +224,12 @@
 #    -added manpage for oobash
 #    -some fixes
 # Version:      0.39.3
-#    -Added global __Signals__ array
-#    -Added class Process with some methods/functions:
-#    -Process, Process.create, Process.find, getPid, getParentPid, getUser, getStatus, getCommand
 #    -Added File methods: md5sum, sha1sum
-#    -new Dependencies:ps, kill, md5sum, sha1sum
+#    -Added class Process with some methods/functions:
+#    -Process, Process.create, Process.exists, getPid, getParentPid, getUser, getStatus, getCommand
+#    -getPriority, setPriority, kill, disown
+#    -new Dependencies:ps, kill, renice, md5sum, sha1sum
+#    -Added global __Signals__ array
 #    -Fixes
 
 #################################################################
