some ideas/todos and change naming for pid var
git-svn-id: http://svn.code.sf.net/p/oobash/code@251 d2084226-57a8-46eb-bcc5-3bd0c7bada0d

--- a/0.39.3/docs/Changelog.txt
+++ b/0.39.3/docs/Changelog.txt
@@ -227,7 +227,7 @@
 #    -Added File methods: md5sum, sha1sum
 #    -Added class Process with some methods/functions:
 #    -Process, Process.create, Process.exists, getPid, getParentPid, getUser, getStatus, getCommand
-#    -getPriority, setPriority, kill, disown
+#    -getPriority, setPriority, kill
 #    -optimized stacktrace if os != linux
 #    -new Dependencies:ps, kill, renice, md5sum, sha1sum
 #    -Added global __Signals__ array
