__isAssocArray, __isArray, __isWriteableAssocArray, __isWriteableArray + index of private content
git-svn-id: http://svn.code.sf.net/p/oobash/code@259 d2084226-57a8-46eb-bcc5-3bd0c7bada0d

--- a/0.39.3/docs/Changelog.txt
+++ b/0.39.3/docs/Changelog.txt
@@ -225,6 +225,7 @@
 #    -some fixes
 # Version:      0.39.3
 #    -Added File methods: md5sum, sha1sum, getFreeSpace, getTotalSpace, getUsableSpace
+#    -Added private functions: __isAssocArray, __isArray, __isWriteableAssocArray, __isWriteableArray
 #    -Added class Process with some methods/functions:
 #    Process, Process.create, Process.exists, getPid, getParentPid, getUser, getStatus, getCommand
 #    -getPriority, setPriority, kill, isDaemon
