--- a/0.39.3/docs/Changelog.txt
+++ b/0.39.3/docs/Changelog.txt
@@ -224,16 +224,18 @@
 #    -added manpage for oobash
 #    -some fixes
 # Version:      0.39.3
-#    -Added File methods: md5sum, sha1sum, getFreeSpace, getTotalSpace, getUsableSpace
-#    -Added private functions: __isAssocArray, __isArray, __isWriteable
-#    -Added class Process with some methods/functions:
+#    -added File methods: md5sum, sha1sum, getFreeSpace, getTotalSpace, getUsableSpace
+#    -added I18n methods: I18n.out.print, I18n.err.print, I18n.out.println, I18n.err.println
+#    -deleted I18n methods: I18n.out.message, I18n.err.message
+#    -added private functions: __isAssocArray, __isArray, __isWriteable
+#    -added class Process with some methods/functions:
 #    Process, Process.create, Process.exists, getPid, getParentPid, getUser, getStatus, getCommand
 #    -getPriority, setPriority, kill, isDaemon
 #    -optimized stacktrace if os != linux
 #    -new Dependencies:ps, kill, renice, md5sum, sha1sum, tail
 #    -new Exception: -NotRunningException return value:200
-#    -Added global __Signals__ array
-#    -Fixes
+#    -added global __Signals__ array
+#    -many fixes
 
 #################################################################
 # Features:
