startmessage + po/mo files + i18n docs changed
git-svn-id: http://svn.code.sf.net/p/oobash/code@286 d2084226-57a8-46eb-bcc5-3bd0c7bada0d

--- a/0.39.3/locale/de/LC_MESSAGES/oobash.po
+++ b/0.39.3/locale/de/LC_MESSAGES/oobash.po
@@ -42,12 +42,12 @@ msgid " Try the developer tool: Class.generator"
 msgstr " Versuchen Sie das Entwicklerwerkzeug: Class.generator"
 
 #: oobash/oobash-0.38.5.source:222
-msgid " Classes: String, File, Boolean, System, Math"
-msgstr " Klassen: String, File, Boolean, System, Math"
+msgid " Classes: String, File, Boolean, System, Math, I18nMessage, Process, Level"
+msgstr " Klassen: String, File, Boolean, System, Math, I18nMessage, Process, Level"
 
 #: oobash/oobash-0.38.5.source:223
-msgid " Constructors: String, File, Boolean"
-msgstr " Konstruktoren: String, File, Boolean"
+msgid " Constructors: String, File, Boolean, Process, Level"
+msgstr " Konstruktoren: String, File, Boolean, Process, Level"
 
 #: oobash/oobash-0.38.5.source:224
 msgid " Usage: String a teststring or File a testfile or Boolean a True"
