Constructors throw exceptions instead of message + return 1
git-svn-id: http://svn.code.sf.net/p/oobash/code@299 d2084226-57a8-46eb-bcc5-3bd0c7bada0d

--- a/0.39.3/docs/Changelog.txt
+++ b/0.39.3/docs/Changelog.txt
@@ -236,6 +236,7 @@
 #    -added dependencies:ps, kill, renice, md5sum, sha1sum, tail
 #    -new Exception: -NotRunningException return value:200
 #    -added global __Signals__ array
+#    -all constructors now throw IllegalArgumentException intstead of a  "message + return 1"
 #    -many fixes
 
 #################################################################
