--- a/0.39.3/docs/Changelog.txt
+++ b/0.39.3/docs/Changelog.txt
@@ -234,6 +234,7 @@
 #    -getPriority, setPriority, kill, isDaemon
 #    -optimized stacktrace if os != linux
 #    -added dependencies:ps, kill, renice, md5sum, sha1sum, tail
+#    -deleted dependencies: dirname, basename
 #    -new Exception: -NotRunningException return value:200
 #    -added global __Signals__ array
 #    -all constructors now throw IllegalArgumentException intstead of a  "message + return 1"
