--- a/0.39.3/docs/Changelog.txt
+++ b/0.39.3/docs/Changelog.txt
@@ -236,7 +236,7 @@
 #    -added dependencies:ps, kill, renice, md5sum, sha1sum, tail
 #    -deleted dependencies: dirname, basename by using:
 #    Substitutions.oobash file with __basename, __dirname function
-#    -new Exception: -NotRunningException return value:200
+#    -new Exception: -ProcessException return value:200
 #    -added global __Signals__ array
 #    -all constructors now throw IllegalArgumentException intstead of a "message + return 1"
 #    -many fixes
