optimize/repair for OSX/Darwin
git-svn-id: http://svn.code.sf.net/p/oobash/code@318 d2084226-57a8-46eb-bcc5-3bd0c7bada0d

--- a/0.39.3/docs/Changelog.txt
+++ b/0.39.3/docs/Changelog.txt
@@ -239,6 +239,7 @@
 #    -new Exception: -ProcessException return value:200
 #    -added global __Signals__ array
 #    -all constructors now throw IllegalArgumentException intstead of a "message + return 1"
+#    -optimized/repaired for OSX/Darwin (Thanks to my friend Jens Maukisch for a OS X ssh account)
 #    -many fixes
 
 #################################################################
