deleted gettext dependency
git-svn-id: http://svn.code.sf.net/p/oobash/code@320 d2084226-57a8-46eb-bcc5-3bd0c7bada0d

--- a/0.39.3/docs/Changelog.txt
+++ b/0.39.3/docs/Changelog.txt
@@ -234,8 +234,7 @@
 #    -getPriority, setPriority, kill, isDaemon
 #    -optimized stacktrace if os != linux
 #    -added dependencies:ps, kill, renice, md5sum, sha1sum, tail
-#    -deleted dependencies: dirname, basename by using:
-#    Substitutions.oobash file with __basename, __dirname function
+#    -deleted dependencies: gettext, dirname, basename
 #    -new Exception: -ProcessException return value:200
 #    -added global __Signals__ array
 #    -all constructors now throw IllegalArgumentException intstead of a "message + return 1"
