--- a/0.39.3/docs/Changelog.txt
+++ b/0.39.3/docs/Changelog.txt
@@ -228,7 +228,7 @@
 #    -added File methods: md5sum, sha1sum, getFreeSpace, getTotalSpace, getUsableSpace
 #    -added I18n methods: I18n.out.print, I18n.err.print, I18n.out.println, I18n.err.println
 #    -deleted I18n methods: I18n.out.message, I18n.err.message
-#    -added private functions: __isAssocArray, __isArray, __isWriteable
+#    -added private functions: __isAssocArray, __isArray, __isWriteable, gnustatCheck
 #    -added class Process with some methods/functions:
 #    Process, Process.create, Process.exists, getPid, getParentPid, getUser, getStatus, getCommand
 #    -getPriority, setPriority, kill, isDaemon
