very small i18n po file fix + small docs correction
git-svn-id: http://svn.code.sf.net/p/oobash/code@333 d2084226-57a8-46eb-bcc5-3bd0c7bada0d

--- a/0.39.3/locale/de/LC_MESSAGES/oobash.po
+++ b/0.39.3/locale/de/LC_MESSAGES/oobash.po
@@ -75,7 +75,7 @@ msgstr " Verfügbares Hilfe System: String.help, File.help, Math.help, System.he
 
 #: oobash/oobash-0.38.5.source:260
 msgid " Usage: Classname.help  methodname(s)|constructorname|constantname or keyword: all"
-msgstr " Anwendung: Klassenname.help  Methodenname(s)|Konstruktorname|Konstantenname oder Schlüsselwort all"
+msgstr " Anwendung: Klassenname.help  Methodenname(n)|Konstruktorname|Konstantenname oder Schlüsselwort all"
 
 #: oobash/oobash-0.38.5.source:261
 msgid " Example: String.help zfill"
