some Process work
git-svn-id: http://svn.code.sf.net/p/oobash/code@347 d2084226-57a8-46eb-bcc5-3bd0c7bada0d

--- a/0.39.3/docs/Changelog.txt
+++ b/0.39.3/docs/Changelog.txt
@@ -232,7 +232,7 @@
 #    -added private functions: __isAssocArray, __isArray, __isWriteable, gnustatCheck, stripPath
 #    -added class Process with some methods/functions:
 #    Process, Process.create, Process.exists, getPid, getParentPid, getUser, getStatus, getCommand
-#    -getPriority, setPriority, kill, isDaemon
+#    -getPriority, setPriority, kill, isDaemon, getEffectiveUserId, getRealUserId
 #    -optimized stacktrace if os != linux
 #    -added dependencies:ps, kill, renice, md5sum, sha1sum, tail
 #    -deleted dependencies: gettext, dirname, basename
