--- a/0.39.3/docs/Changelog.txt
+++ b/0.39.3/docs/Changelog.txt
@@ -230,6 +230,7 @@
 #    -added I18n methods: I18n.out.print, I18n.err.print, I18n.out.println, I18n.err.println
 #    -deleted I18n methods: I18n.out.message, I18n.err.message
 #    -added private functions: __isAssocArray, __isArray, __isWriteable, gnustatCheck, stripPath
+#    -added Substitutions file: __basename; __dirname
 #    -added class Process with some methods/functions:
 #    Process, Process.create, getPid, getParentPid, getUser, getStatus, getCommand
 #    -getPriority, setPriority, kill, isDaemon, getEffectiveUserId, getRealUserId
