--- a/0.39.4/docs/Changelog.txt
+++ b/0.39.4/docs/Changelog.txt
@@ -243,6 +243,7 @@
 #    -many fixes
 # Version:      0.39.4
 #    -added File methods: base, extension
+#    -fixes
 
 #################################################################
 # Features:
