new start for 0.39.4
git-svn-id: http://svn.code.sf.net/p/oobash/code@367 d2084226-57a8-46eb-bcc5-3bd0c7bada0d

--- a/0.39.4/docs/Changelog.txt
+++ b/0.39.4/docs/Changelog.txt
@@ -243,6 +243,8 @@
 #    -many fixes
 # Version:      0.39.3.1
 #    -fixes
+# Version:      0.39.4
+#    -added File methods: base, extension
 
 #################################################################
 # Features:
