--- a/0.39.4/docs/Changelog.txt
+++ b/0.39.4/docs/Changelog.txt
@@ -244,7 +244,8 @@
 # Version:      0.39.3.1
 #    -fixes
 # Version:      0.39.4
-#    -added File methods: base, extension
+#    -added File methods: getBase, getExtension
+#    -added Process: getMemorySize, getStartTime
 
 #################################################################
 # Features:
