added to File: createTemporaryDir createTempDir
git-svn-id: http://svn.code.sf.net/p/oobash/code@374 d2084226-57a8-46eb-bcc5-3bd0c7bada0d

--- a/0.39.4/docs/Changelog.txt
+++ b/0.39.4/docs/Changelog.txt
@@ -244,9 +244,9 @@
 # Version:      0.39.3.1
 #    -fixes
 # Version:      0.39.4
-#    -added File methods: getBase, getExtension
+#    -added File methods: getBase, getExtension, File.createTemporaryDir, File.createTempDir
 #    -added Process: getMemorySize, getStartTime
-#    -added Math: cbrt
+#    -added Math: Math.cbrt
 #    -Fixes
 
 #################################################################
