--- a/0.39.4/docs/Changelog.txt
+++ b/0.39.4/docs/Changelog.txt
@@ -242,10 +242,10 @@
 #    -all constructors now throw IllegalArgumentException intstead of a "message + return 1"
 #    -many fixes
 # Version:      0.39.3.1
-#    -fixes
+#    -Fixes
 # Version:      0.39.4
 #    -added File methods: getBase, getExtension, File.createTemporaryDir, File.createTempDir,getPosixFilePermissions,
-                          setPosixFilePermissions
+#                         setPosixFilePermissions
 #    -added Process: getMemorySize, getStartTime
 #    -added Math: Math.cbrt
 #    -Fixes
