md5sum and sha1sum now depend on openssl
git-svn-id: http://svn.code.sf.net/p/oobash/code@393 d2084226-57a8-46eb-bcc5-3bd0c7bada0d

--- a/0.39.4/docs/Changelog.txt
+++ b/0.39.4/docs/Changelog.txt
@@ -248,6 +248,8 @@
 #                         setPosixFilePermissions
 #    -added Process: getMemorySize, getStartTime
 #    -added Math: Math.cbrt
+#    -added dependency: openssl
+#    -removed dependencies: base64 md5sum/md5 sha1sum/shasum
 #    -Fixes
 
 #################################################################
