very small sshhost changes + changed exception return values
git-svn-id: http://svn.code.sf.net/p/oobash/code@399 d2084226-57a8-46eb-bcc5-3bd0c7bada0d

--- a/0.39.4/docs/Changelog.txt
+++ b/0.39.4/docs/Changelog.txt
@@ -248,8 +248,11 @@
 #                         setPosixFilePermissions
 #    -added Process: getMemorySize, getStartTime
 #    -added Math: Math.cbrt
+#    -added class SshHost with some methods/functions:
+#    SshHost, 
 #    -added dependency: openssl
 #    -removed dependencies: base64 md5sum/md5 sha1sum/shasum
+#    -changed return values for exceptions, added AuthException
 #    -Fixes
 
 #################################################################
