removed File: renameTo method
git-svn-id: http://svn.code.sf.net/p/oobash/code@404 d2084226-57a8-46eb-bcc5-3bd0c7bada0d

--- a/0.39.4/docs/Changelog.txt
+++ b/0.39.4/docs/Changelog.txt
@@ -246,12 +246,13 @@
 # Version:      0.39.4
 #    -added File methods: getBase, getExtension, File.createTemporaryDir, File.createTempDir, getPosixFilePermissions,
 #                         setPosixFilePermissions
+     -removed File: renameTo method
 #    -added Process: getMemorySize, getStartTime
 #    -added Math: Math.cbrt
 #    -added experimental class Ssh with some methods/functions:
 #    Ssh, getSshHost, getSshUser, getSshPort, copy, diff, command, vimEdit, connect
 #    -added dependency: openssl
-#    -removed dependencies: base64 md5sum/md5 sha1sum/shasum
+#    -removed dependencies: base64 md5sum/md5 sha1sum/shasum tail
 #    -changed return values for exceptions, added AuthException
 #    -Fixes
 
