mini pretty changes
git-svn-id: http://svn.code.sf.net/p/oobash/code@411 d2084226-57a8-46eb-bcc5-3bd0c7bada0d

--- a/0.39.4/docs/Changelog.txt
+++ b/0.39.4/docs/Changelog.txt
@@ -245,7 +245,7 @@
 #    -Fixes
 # Version:      0.39.4
 #    -added File methods: getBase, getExtension, getPosixFilePermissions, setPosixFilePermissions
-#    File.createTemporaryDir, File.createTempDir,
+#    File.createTemporaryDir, File.createTempDir
 #    -removed File: renameTo method
 #    -added Process: getMemorySize, getStartTime
 #    -added Math: Math.cbrt
