--- a/0.39.4/docs/Changelog.txt
+++ b/0.39.4/docs/Changelog.txt
@@ -251,7 +251,7 @@
 #    -added Math: Math.cbrt
 #    -added experimental class Ssh with some methods/functions:
 #    Ssh, getSshHost, getSshUser, getSshPort, copy, diff, command, vimEdit, connect
-#    -added dependency: openssl, diff
+#    -added dependency: openssl, diff, ssh, scp, vim
 #    -removed dependencies: base64 md5sum/md5 sha1sum/shasum tail
 #    -changed return values for exceptions, added AuthException
 #    -many fixes
