--- a/0.39.5/docs/Changelog.txt
+++ b/0.39.5/docs/Changelog.txt
@@ -256,6 +256,7 @@
 #    -changed return values for exceptions, added AuthException
 #    -many fixes
 # Version:      0.39.5
+#    -File: added getLine, delLine
 #    -Fixes
 
 #################################################################
