added diff dependency, added Math.cbrt man page
git-svn-id: http://svn.code.sf.net/p/oobash/code@422 d2084226-57a8-46eb-bcc5-3bd0c7bada0d

--- a/0.39.5/docs/Changelog.txt
+++ b/0.39.5/docs/Changelog.txt
@@ -257,6 +257,8 @@
 #    -many fixes
 # Version:      0.39.5
 #    -File: added getLine, delLine
+#    -Ssh: added diff, copy
+#    -added Dependencies: diff
 #    -Fixes
 
 #################################################################
