--- a/0.39.5/docs/Changelog.txt
+++ b/0.39.5/docs/Changelog.txt
@@ -258,6 +258,7 @@
 # Version:      0.39.5
 #    -File: added getLine, delLine
 #    -Ssh: added diff, copy
+#    -support for upper case sharp s
 #    -added Dependencies: diff
 #    -Fixes
 
