forgotten change in log, new roadmap
git-svn-id: http://svn.code.sf.net/p/oobash/code@435 d2084226-57a8-46eb-bcc5-3bd0c7bada0d

--- a/0.39.5/docs/Changelog.txt
+++ b/0.39.5/docs/Changelog.txt
@@ -260,6 +260,7 @@
 #    -Ssh: added diff, copy
 #    -added Script.generator (skeleton) + empty scripts directory
 #    -support for upper case sharp s
+#    -support for pseudo signal "0" with Process kill command
 #    -added Dependencies: diff
 #    -Fixes
 
