--- a/0.39.5/docs/Changelog.txt
+++ b/0.39.5/docs/Changelog.txt
@@ -256,11 +256,12 @@
 #    -changed return values for exceptions, added AuthException
 #    -many fixes
 # Version:      0.39.5
-#    -File: added getLine, delLine
+#    -File: added getLine, delLine, setLine
 #    -Ssh: added diff, copy
 #    -added Script.generator (skeleton) + empty scripts directory
-#    -support for upper case sharp s
+#    -support for upper case sharp s for String
 #    -support for pseudo signal "0" with Process kill command
+#    -rollback for PATH and MANPATH during __cleanUp
 #    -added Dependencies: diff
 #    -Fixes
 
