--- a/0.39.5/docs/Changelog.txt
+++ b/0.39.5/docs/Changelog.txt
@@ -257,7 +257,7 @@
 #    -many fixes
 # Version:      0.39.5
 #    -File: added getLine, delLine, setLine
-#    -Ssh: added diff, copy
+#    -Ssh: added diff, diffIgnoreAllSpace, diffIgnoreBlankLines, copy
 #    -added Script.generator (skeleton) + empty scripts directory
 #    -support for upper case sharp s for String
 #    -support for pseudo signal "0" with Process kill command
