very small i18n fix
git-svn-id: http://svn.code.sf.net/p/oobash/code@448 d2084226-57a8-46eb-bcc5-3bd0c7bada0d

--- a/0.39.5/locale/de/LC_MESSAGES/oobash.po
+++ b/0.39.5/locale/de/LC_MESSAGES/oobash.po
@@ -200,7 +200,7 @@ msgstr " Konnte MANPATH nicht anpassen!"
 
 #: oobash/src/util/Generator.oobash:
 msgid "   Please enter one script name"
-msgstr "   Bitte geben Sie eine Skriptnmen ein"
+msgstr "   Bitte geben Sie einen Skriptnamen ein"
 
 #: oobash/src/util/Generator.oobash:
 msgid "   Crash! Script already exists."
