added set +e in oobash-0.39.5.source 3
git-svn-id: http://svn.code.sf.net/p/oobash/code@449 d2084226-57a8-46eb-bcc5-3bd0c7bada0d

--- a/0.39.5/docs/Changelog.txt
+++ b/0.39.5/docs/Changelog.txt
@@ -263,6 +263,7 @@
 #    -support for upper case sharp s for String
 #    -support for pseudo signal "0" with Process kill command
 #    -rollback for PATH and MANPATH during __cleanUp
+#    -set +errexit (should be default anyway - needed by some private functions) in oobash-0.39.5.source
 #    -added Dependencies: diff
 #    -Fixes
 
