uses pod docs in shell scripts, when created by Script.generator
git-svn-id: http://svn.code.sf.net/p/oobash/code@451 d2084226-57a8-46eb-bcc5-3bd0c7bada0d

--- a/0.39.5/docs/Changelog.txt
+++ b/0.39.5/docs/Changelog.txt
@@ -259,6 +259,8 @@
 #    -File: added getLine, delLine, setLine
 #    -Ssh: added diff, diffIgnoreAllSpace, diffIgnoreBlankLines, copy
 #    -added Script.generator (skeleton) + empty scripts directory
+#     uses great idea to use pod docs in shell scripts from:
+#     http://bahut.alma.ch/2007/08/embedding-documentation-in-shell-script_16.html
 #    -added private functions:__isInteger
 #    -support for upper case sharp s for String
 #    -support for pseudo signal "0" with Process kill command
