--- a/0.39.5/docs/Changelog.txt
+++ b/0.39.5/docs/Changelog.txt
@@ -258,10 +258,10 @@
 # Version:      0.39.5
 #    -File: added getLine, delLine, setLine
 #    -Ssh: added diff, diffIgnoreAllSpace, diffIgnoreBlankLines, copy
-#    -added Script.generator (skeleton) + empty scripts directory
+#    -added Script.generator (skeleton):
 #     uses great idea to use pod docs in shell scripts from:
 #     http://bahut.alma.ch/2007/08/embedding-documentation-in-shell-script_16.html
-#    -added private functions:__isInteger
+#    -added private function:__isInteger
 #    -support for upper case sharp s for String
 #    -support for pseudo signal "0" with Process kill command
 #    -rollback for PATH and MANPATH during __cleanUp
